# rust_checker

./: CHANGELOG.md  Cargo.toml  README.md
scripts/: install_git_hook.rs
src/: config.rs  fixer.rs  lib.rs  main.rs  plugin.rs  report.rs  rules.rs  scanner.rs  tooling.rs  unused_checker.rs
src/report/: badge.rs  html.rs  junit.rs  mod.rs
src/web/: mod.rs
tests/: validate.rs
