[package]
name = "rust_checker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Compliance-grade Rust code quality checker with CI/JUnit/HTML reports, auto-fixes, plugin system, and web dashboard."
repository = "https://github.com/0rlych1kk4/rust_checker"
readme = "README.md"
keywords = ["lint", "static-analysis", "cli", "rust", "code-quality"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

# Each binary must be declared separately
[[bin]]
name = "install_git_hook"
path = "scripts/install_git_hook.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"
